# uav_ros_tracker

./: .gitignore  CMakeLists.txt  README.md  nodelets.xml  package.xml  plugins.xml  toppra_uav_ros_tracker.launch
.ci/: ci_before_install.sh
.github/workflows/: melodic.yml  noetic.yml
cfg/: MPCTrackerParameters.cfg
config/: mpc_tracker_config.yaml  mpc_tracker_smooth_config.yaml  topp_config_default.yaml  topp_config_fast.yaml  topp_config_marcus.yaml  topp_config_slow.yaml  waypoint_config.yaml
include/uav_ros_tracker/: cvx_wrapper.h  mpc_tracker.hpp  planner_interface.hpp  waypoint_publisher.hpp
launch/: mpc_tracker.launch  topp_tracker.launch  topp_tracker_marcus.launch  waypoint_manager.launch
nodes/: mpc_test.cpp  mpc_tracker.cpp  mpc_tracker_node.cpp  waypoint_manager_nodelet.cpp
scripts/: rviz_clicker.py  topp_tracker.py
src/: cvx_wrapper.cpp  mpc_tracker.cpp  waypoint_publisher.cpp
src/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
startup/kopterworx_waypoints/: session.yml
startup/waypoint_dryrun/: session.yml
