<?xml version="1.0"?>

<package format="2">
  <name>uav_ros_tracker</name>
  <version>0.0.0</version>
  <description>The main reference generator for the "uav_ros_stack" package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lovro.markovic@fer.hr">Lovro Markovic</maintainer>
  <depend>pluginlib</depend>
  <depend>nodelet</depend>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>uav_ros_msgs</build_depend>
  <build_depend>uav_ros_lib</build_depend>
  <build_depend>geographiclib</build_depend>
  <build_depend>geographiclib-tools</build_depend>
  <build_depend>mavros</build_depend>

  <exec_depend>uav_ros_msgs</exec_depend>
  <exec_depend>uav_ros_lib</exec_depend>
  <exec_depend>geographiclib</exec_depend>
  <exec_depend>geographiclib-tools</exec_depend>
  <exec_depend>uav_ros_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>
  
    <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/nodelets.xml" />
    <uav_ros_tracker plugin="${prefix}/plugins.xml"/>

  </export>
</package>
